--- a/0012-mysql/package.json
+++ b/0012-mysql/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "config": "^3.3.11",
-    "mysql2": "^3.9.2"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.2",
+    "ts-node": "^10.9.2",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@types/config": "^3.3.3",
