--- a/0010-ejs/package.json
+++ b/0010-ejs/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "ejs": "^3.1.9",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
